# distributed_indexer

./: ARCHITECTURE.md  commands.txt  docker-compose.kafka.yml  hello.txt
indexer_1/: .env.example  Cargo.toml
indexer_1/src/: main.rs
ingestor/: .env  .env.example  Cargo.toml
ingestor/src/: main.rs
ingestor/src/yellowstone/: client.rs  kafka.rs  mod.rs  router.rs  subscriptions.rs
pumpswap-trades-indexer/: .env.example  Cargo.toml
pumpswap-trades-indexer/src/: main.rs  pumpswap.rs
token_transfers_indexer/: Cargo.toml
token_transfers_indexer/src/: main.rs  token.rs
