[package]
name = "pumpswap-indexing"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
dotenv = "0.15"
solana-sdk = "2.1.18"
yellowstone-grpc-proto = "4.0.0"
futures = "0.3"
rdkafka = { version = "0.36", features = ["cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
prost = "0.13"
