[package]
name = "token_transfers_indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
dotenv = "0.15"
rdkafka = { version = "0.36", features = ["cmake-build"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
prost = "0.13"
yellowstone-grpc-proto = "4.0.0"
solana-sdk = "2.1.18"
spl-token = "4.0.0"
spl-token-2022 = "4.0.0"
